--- a/css/new.css
+++ b/css/new.css
@@ -90,6 +90,10 @@ body{
   padding-left: 25%;
 }
 
+.ad1 {
+  margin-right: 2%;
+}
+
 .address1{
   font-size: 130%;
   padding-top: 3%;
@@ -99,10 +103,11 @@ body{
   color: #e47450;/*додатковий яскраво-оранжевий*/
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 770px){
   .address1 address{
     float: left;
   }
+
 }
 
 /*-----navigation----------------------------*/
