--- a/css/new.css
+++ b/css/new.css
@@ -9,7 +9,7 @@
 */
 
 *{
-  /*border: 1px solid;*/
+  border: 1px solid;*/
   margin: 0;
   padding: 0;
 }
@@ -155,11 +155,10 @@ nav{
 }
 #nav {
   width: 100%; /* 1000 */
-  font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   padding: 0;
   margin: 0;
-  margin-left: -2%;
+  margin-left: -1%;
   position: absolute;
 }
 
@@ -385,7 +384,7 @@ nav{
     width: 100%;
     position: relative;
     margin: 0;
-    margin-left: -10%;
+    margin-left: 1%;
   }
 }
 
