--- a/css/newabout.css
+++ b/css/newabout.css
@@ -7,135 +7,213 @@
 #74A516 - додатковий колір зелений
 #BFF08E - додатковий колір світло-зелений(footer)
 */
-
-/**{
-  border: 1px solid;
-}*/
-
-body, header .row, header .container, .middle{
+*{
+  border: 1px solid;*/
   margin: 0;
   padding: 0;
 }
 
-/* body, wrapper, footer
------------------------------------------------------------------------------*/
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+/*-----BODY----------------------------*/
 body{
   background-color: #f8e7ba;
   color:#5D7274;/*основний колір всього тексту сірий*/
   font: 14px/20px 'Caveat Brush', cursive;
   height: 100%;
   overflow: scroll;
+  margin: 0;
+  padding:0;
 }
 
-.wrapper, .footer, nav, .middle{
+.wrapper {
   max-width: 1199px;
   min-width: 300px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   padding: 0;
-}
-
-.wrapper {
+  margin-top: 40px;
   background-color: white;
-  margin-top: 46px;
 }
 
-.footer {
-  height: 200px;
-  background: url(../images2/footer1.png);
-  background-repeat: no-repeat;
-  background-color: #BFF08E;
-  text-align: center;
-  font-size: 150%;
-  padding-top: 50px; /*додатковий колір світло зелений*/
-}
-
-@media(max-width: 768px){
-  .wrapper{
-    margin-top: 0px;}
-  .footer{
-    font-size: 90%;
-    padding-top: 10px;}
-}
-
-/* header
------------------------------------------------------------------------------*/
-.header{
-  background: url(../images2/animals_header.png);
-  background-position: right top;
-  background-repeat: no-repeat;
-  padding: 0;
-  padding-top: 30px;
+.wrapper:before {
+  position: absolute;
+  display: inline-block;
+  content: '';
   width: 100%;
+  height: 5px;
+  left: 0;
+  top: -5px;
+  background: url(../images2/bg_edge1.png) repeat-x 0 0;
+}
+
+/*-----header----------------------------*/
+.header{
   position: relative;
-  height: 200px;
-  z-index: 100;
+  padding-top: 2%;
+  padding-left: 1%;
+  height: 100%;
+  background: url(../images2/animalsHeader.png);
+  background-color: white;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  z-index: 10;
 }
-
-@media(max-width: 768px){
-  .header{
-    background-size: 100px;
-    height: 90px;
-    padding-top: 10px;}
-}
-
-/* Головний напис
------------------------------------------------------------------------------*/
-.txt_napus2{
+.logo{
   margin: 0;
-  padding-left: 140px;
+  padding: 0;
 }
 
-.txt_napus1{
+.row{
+  width: 100%;
   margin: 0;
-  padding-left: 100px;
+  padding: 0;
+}
+
+.posmishka{
   color: #EE9E69;/*Додаткой колір світло оранжевий*/
   text-transform: uppercase;
-  margin-top: 2px;
+  margin-bottom: 2.5%;
+  padding-left: 16%;
+  padding-top: 0;
+  margin-top: 0;
 }
 
-.text-left{
-  margin: 0;
-  margin-top: 20px;
+.small{
+  padding-left: 25%;
 }
 
-@media(max-width: 768px){
-  .txt_napus2{
-    padding-left: 60px;
-    font-size: 120%;}
-  .txt_napus1{
-    padding-left: 35px;
-    font-size: 140%;}
-  .text-left{
-    font-size: 120%;}
+.ad1 {
+  margin-right: 2%;
 }
 
-/* Контакти
------------------------------------------------------------------------------*/
-.col-sm-5{
-  margin-top:0px;
-  font-size: 140%;
-  padding-top: 40px;
+.address1{
+  font-size: 130%;
+  padding-top: 3%;
 }
 
-.col-sm-5 a{
-  color: #E47450;/*додатковий яскраво-оранжевий*/
+.address1 a{
+  color: #e47450;/*додатковий яскраво-оранжевий*/
 }
 
-@media(max-width: 768px){
-  .col-sm-5{ display: none;}
+@media screen and (max-width: 826px){
+  .small, .posmishka{
+    padding-left: 0;
+  }
 }
 
-/* меню сайту
------------------------------------------------------------------------------*/
+@media screen and (max-width: 770px){
+  .address1 address{
+    float: left;
+  }
+   .small{
+    padding-left: 25%;
+   }
+  .posmishka{
+    padding-left: 16%;
+  } 
+}
+
+@media screen and (max-width: 484px){
+  .small, .posmishka{
+    padding-left: 0;
+  }
+}
+
+/*-----navigation----------------------------*/
+.clearfix:after{
+  visibility: hidden;
+  display: block;
+ 
+}
+
+* html .clearfix{
+  zoom: 1;
+}
+
+*:first-child+html .clearfix{
+  zoom: 1;
+}
+
+.cleaner{
+  height: 0;
+  line-height: 0;
+  clear: both;
+}
+
+ul, ol{
+  list-style: none;
+}
 nav{
-  background: white;
-  width: 100%;
-  position: relative;
+  display: block;
+}
+#nav {
+  width: 100%; /* 1000 */
+  font-weight: 600;
+  padding: 0;
+  margin: 0;
+  margin-left: -1%;
+  position: absolute;
 }
 
-.main-menu{
+#nav > a {
+  display: none;
+  color: #5D7274;/*Show navigation*/
+  text-decoration: none;
+}
+
+#nav li {
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+#nav li a {
+  display: block;
+  color: #5D7274;
+  padding: 5px;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+#nav li a:hover{
+  background: #EE9E69;/*Додаткой колір світло оранжевий*/
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+#nav li a:active {
+  background-color: #EE9E69 !important;
+}
+
+/* колір активної кнопки на цій сторінці
+#nav .active a{
+  background: #EE9E69;
+}*/
+
+#nav span:after { /*трикутник на кнопці з підменю*/
+  width: 0;
+  height: 0;
+  border: 0.313em solid transparent; /* 5 */
+  border-bottom: none;
+  border-top-color: #efa585;
+  content: '';
+  vertical-align: middle;
+  display: inline-block;
+  position: relative;
+  right: -0.313em; /* 5 */
+}
+
+/* first level */
+#nav > ul { /*основне меню*/
+  height: auto;
+  background-color:none;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -143,80 +221,190 @@ nav{
   width: 100%;
 }
 
-.main-menu > li{
-  position: relative;
+#nav > ul > li {
+  width:auto; /*ширина кожного li в основному меню*/
+  height: 100%;
+  float: left;
   display:inline-block;
   margin-right: 0px; 
-  padding: 0 10px 0 0;
-}
-
-.main-menu a{
-  display: block;
-  border-left: 2px dotted #77746c;
-  color: #5D7274;
-  padding: 5px;
-  text-decoration: none;
-}
-
-.main-menu a:hover{
-  background: #EE9E69;/*Додаткой колір світло оранжевий*/
-}
-
-.col-sm-12 .main-menu .active{
-  background: #EE9E69;/*Додаткой колір світло оранжевий*/
-}
-
-.col-sm-12 .main-menu .active a{
-  color: white;
-  text-decoration: none;
-  border-left: 2px dotted #E47450;/*додатковий яскраво-оранжевий*/
-}
-
-.main-menu .dropdown-menu{
-  position: absolute;
-  list-style: none;
-  background: #EE9E69;/*Додаткой колір світло оранжевий*/
-  width: 300px;
   padding: 0;
-  margin-top: -1px;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+#nav > ul > li > a {
+  height: 100%;
+  font-size: 18px; /* 24 */
+  text-align: left;
+}
+
+#nav > ul > li:not( :last-child ) > a {
+  border-right: 2px dotted #77746c;
+}
+
+#nav > ul > li:hover > a, #nav > ul:not( :hover ) > li.active > a {
+  background-color: #EE9E69;
+  color:white;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+/* second level */
+#nav li ul { /*підменю*/
+  background-color:  white;
   display: none;
-  z-index: 10;
+  position: absolute;
+  top: 100%;/*на яку висоту опустити підменю*/
+  padding-left: 0px;
+  width: 300px;
 }
 
-.main-menu .dropdown-menu a{
-  color: white;
-  border: none;
-}
-
-.main-menu >li:hover .dropdown-menu{
+#nav li:hover ul {
   display: block;
+  left: 0;
+  right: 0;
 }
 
-nav .btn-group {
+#nav li:not( :first-child ):hover ul {
+  left: -1px; /*в яку сторонц посунути підменю*/
+}
+
+#nav li ul a {
+  font-size: 18px; /* 20 */
+  border-top: none;
+  padding: 0; /* 15 (20) */
+  text-align: left;
+  height: 40px; /*висота кожного а*/
+}
+
+#nav li ul li a:hover, #nav li ul:not( :hover ) li.active a {
+  background-color: #EE9E69;
+  color: white;
+}
+
+@media only screen and ( max-width: 991px ) /* 1000 */ {
+  #nav {
+    width: 100%;
+    position: static;
+    margin: 0;
+    margin-left: -19%;
+  }
+}
+
+@media only screen and ( max-width: 960px ) /* 1000 */ {
+  #nav {
+    width: 100%;
+    position: relative;
+    margin: 0;
+    margin-left: -10%;
+    left: auto;
+  }
+}
+
+@media only screen and ( max-width: 823px ) /* 1000 */ {
+  #nav {
+    width: 100%;
+    position: relative;
+    margin: 0;
+    margin-left: -5%;
+  }
+}
+
+@media only screen and ( max-width: 640px ) /* 640 */ {
+  html {
+  font-size: 12px;
+  } /* 12 */
+  #nav {
+  position: relative;
+  top: auto;
+  }
+  #nav > a { /*кнопка що зявляється*/
+  width: 50px; /* 50 */
+  height: 50px; /* 50 */
+  text-align: left;
+  text-indent: -9999px;
+  background-color: #EE9E69;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+  }
+  #nav > a:before, #nav > a:after {/*полоски на малій кнопці*/
+  position: absolute;
+  border: 2px solid #fff;
+  top: 35%;
+  left: 25%;
+  right: 25%;
+  content: '';
+  }
+  #nav > a:after {
+  top: 60%;
+  }
+  #nav:not( :target ) > a:first-of-type, #nav:target > a:last-of-type {
+  display: block;
+  }
+/* first level */
+  #nav > ul {
+  height: 200px; /*висота самого меню прихованого*/
+  background: white;
   display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  }
+  #nav:target > ul {
+  display: block;
+  }
+  #nav > ul > li {
+  width: 100%;
+  height: 40px;/*висота комірок в прих меню*/
+  float: none;
+  }
+  #nav > ul > li > a {
+  height: auto;
+  height: 40px;/*висота шрифту*/
+  text-align: left;
+  padding: 0 0.833em; /* 20 (24) */
+  }
+  #nav > ul > li:not( :last-child ) > a {
+  border-right: none;
+  border-bottom: 1px dotted #E47450;
+  }
+/* second level */
+  #nav li ul {
+  display: none;
+  }
+  #nav li ul a{
+    display: none;
+  }
 }
 
-@media (max-width: 768px) {
-  .main-menu a{
-    font-size: 10px;
-    border-left: 0;}
-  .main-menu > li{padding: 0px;
-    margin: 0px;
-    margin-right: -7px;}
-  .main-menu {
-    margin-left: -12px;}
-  .main-menu .dropdown-menu{
-    width: 220px;}
+@media screen and (max-width: 1199px){
+  #nav {
+    width: 100%;
+    position: relative;
+    margin: 0;
+    margin-left: 1%;
+  }
 }
 
-/* Middle
------------------------------------------------------------------------------*/
+@media screen and (max-width: 1100px){
+  #nav {
+    width: 100%;
+    position: relative;
+    margin: 0;
+    margin-left: 0;
+  }
+}
+
+
+/*-----middle----------------------------*/
+
 .middle {
   width: 100%;
-  padding: 0px;
+  padding: 0;
+  padding-top: 4%;
   position: relative;
-  background: white;
-  padding-top: 15px;
+  padding-bottom: 1%;
 }
 
 .middle:after {
@@ -225,54 +413,58 @@ nav .btn-group {
   content: '';
 }
 
-.one, .two, .three{
+@media screen and (max-width: 1000px){
+  .middle{
+     padding-top: 10px;
+  }
+}
+
+@media screen and (max-width: 1199px){
+  .middle{
+     padding-top: 0;
+  }
+}
+
+.one, .two{
   border-top: 2px dotted ;
   padding-top: 0;
-  font-size: 120%;
+  margin: 0;
+  font-size: 100%;
   text-align:justify;
 }
 
-.two .text{
-  padding-left: 70px;
-}
-
-.one .text-center, .two .text-center, .three .text-center{
-  color: #E47450;
-}
-
-.one .col-sm-4{
-  padding-left: 15px;
+.one .row, .two .row{
+  padding: 1%;
+  padding-left: 0;
   margin: 0;
+}
+
+.one .text-center, .two .text-center{
+  font-size: 260%;
+  color: #E47450;
+  padding: 0;
+  margin: 0;
+}
+
+.one .col-md-4{
+   margin: 0;
   float: left;
 }
 
-.col-sm-4 img{
+.col-md-4 img{
   width: 100%;
 }
 
-.one .col-sm-8{
+.one .col-md-8{
   text-indent: 30px;
-
+  padding: 1.5% 0;
 }
 
-.three .col-sm-4 .thumbnail p, .three .col-sm-4 .thumbnail h3{
-  color: #5D7274;
-  padding: 0;
-  margin: 5px;
+.two .col-sm-6{
+ padding: 0;
+ padding-top: 1.5%;
 }
 
-.three{
-  font-size: 115%;
-}
-
-.three .col-sm-4 .thumbnail{
-  height: 540px;
-}
-
-.three .col-sm-4 .thumbnail img{
-  height: 280px;
-  width: 342px;
-}
 
 .block {
   background: #EBA830;
@@ -297,44 +489,63 @@ nav .btn-group {
   border-left: 10px solid #EBA830;
 }
 
-.two .text-center, .one .text-center{
-  margin-bottom: 25px;
+
+
+
+.three{
+  border-top: 2px dotted ;
+  padding-top: 0;
+  font-size: 100%;
+  text-align:justify;
+}
+
+.two .text{
+  padding-left: 70px;
 }
 
 
-  .one, .two, .three{
-    font-size: 90%;}
-  .two .text-center, .one .text-center{
-  margin-bottom: 5px;}
-  .three .col-sm-4 .thumbnail{
-  height: 440px;}
-  .three .col-sm-4 .thumbnail img{
-  height: 240px;
-  width: 302px;}
-  .one .col-sm-4 img{
-    height: 240px;
-    width: 100%;}
-  .one h1, .two h1, .three h1{
-    font-size: 150%;}
-  .text-center {
-    font-size: 140%;}
+
+
+.three .col-sm-4 .thumbnail p, .three .col-sm-4 .thumbnail h3{
+  color: #5D7274;
+  padding: 0;
+  
 }
 
-@media(max-width: 1024px){
-  .one, .two, .three{
-    font-size: 90%;}
-  .two .text-center, .one .text-center{
-  margin-bottom: 5px;}
-  .three .col-sm-4 .thumbnail{
-  height: 440px;}
-  .three .col-sm-4 .thumbnail img{
-  height: 240px;
-  width: 302px;}
-  .one .col-sm-4 img{
-    height: 240px;
-    width: 100%;}
-  .one h1, .two h1, .three h1{
-    font-size: 150%;}
-  .text-center {
-    font-size: 140%;}
+.three{
+  font-size: 115%;
+}
+
+.three .col-sm-4 .thumbnail{
+  height: 540px;
+}
+
+.three .col-sm-4 .thumbnail img{
+  height: 280px;
+  width: 342px;
+}
+
+
+
+
+
+
+
+
+.footer {
+  background: url(../images2/footer1.png);
+  background-repeat: no-repeat;
+  background-color: #BFF08E;/*додатковий колір світло зелений*/
+  text-align: center;
+  font-size: 150%;
+}
+.footer:before {
+  position: absolute;
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 5px;
+  left: 0;
+  bottom: -2px;
+  background: url(../images2/bg_edge4.png) repeat-x 0 0;
 }
