--- a/css/newabout.css
+++ b/css/newabout.css
@@ -8,7 +8,7 @@
 #BFF08E - додатковий колір світло-зелений(footer)
 */
 *{
-  border: 1px solid;*/
+/* border: 1px solid;*/
   margin: 0;
   padding: 0;
 }
@@ -225,8 +225,8 @@ nav{
   width:auto; /*ширина кожного li в основному меню*/
   height: 100%;
   float: left;
-  display:inline-block;
-  margin-right: 0px; 
+  display:block;
+  margin-right: 0; 
   padding: 0;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0,0,0,.3);
@@ -282,7 +282,7 @@ nav{
   color: white;
 }
 
-@media only screen and ( max-width: 991px ) /* 1000 */ {
+@media only screen and( max-width:991px){
   #nav {
     width: 100%;
     position: static;
@@ -291,7 +291,7 @@ nav{
   }
 }
 
-@media only screen and ( max-width: 960px ) /* 1000 */ {
+@media only screen and (max-width: 960px){
   #nav {
     width: 100%;
     position: relative;
@@ -425,7 +425,7 @@ nav{
   }
 }
 
-.one, .two{
+.one, .two, .three{
   border-top: 2px dotted ;
   padding-top: 0;
   margin: 0;
@@ -439,7 +439,12 @@ nav{
   margin: 0;
 }
 
-.one .text-center, .two .text-center{
+.two .row .col-sm-6{
+  padding: 1%;
+  padding-right: 0;
+}
+
+.one .text-center, .two .text-center, .three .text-center{
   font-size: 260%;
   color: #E47450;
   padding: 0;
@@ -457,14 +462,13 @@ nav{
 
 .one .col-md-8{
   text-indent: 30px;
-  padding: 1.5% 0;
+  padding: 1.5% 0.5%;
 }
 
 .two .col-sm-6{
  padding: 0;
  padding-top: 1.5%;
 }
-
 
 .block {
   background: #EBA830;
@@ -489,48 +493,42 @@ nav{
   border-left: 10px solid #EBA830;
 }
 
-
-
-
-.three{
-  border-top: 2px dotted ;
-  padding-top: 0;
-  font-size: 100%;
-  text-align:justify;
-}
-
 .two .text{
   padding-left: 70px;
 }
 
+.three .text-center{
+  padding: 1%;
+} 
 
-
-
-.three .col-sm-4 .thumbnail p, .three .col-sm-4 .thumbnail h3{
-  color: #5D7274;
-  padding: 0;
-  
+.three .gellery{
+  color: #EBA830;/*додатковий колір яскраво-жовтий*/
+  padding-top: 2%;
+  font-size: 200%;
 }
 
-.three{
-  font-size: 115%;
+.three .thumbnail .gellery {
+  padding-bottom: 2%;
 }
 
-.three .col-sm-4 .thumbnail{
-  height: 540px;
+.three .thumbnail {
+  height:530px;
 }
 
-.three .col-sm-4 .thumbnail img{
-  height: 280px;
-  width: 342px;
+@media screen and (max-width: 991px){
+  .three .thumbnail img{
+    height: 70%;
+    width: auto;
+    padding: 0;
+  }
+  .three .gellery{
+    padding: 0;
+    margin: 0;  
+  }
+  .three .thumbnail{
+    height: auto;
+  }
 }
-
-
-
-
-
-
-
 
 .footer {
   background: url(../images2/footer1.png);
