--- a/css/newprograms.css
+++ b/css/newprograms.css
@@ -9,7 +9,7 @@
 */
 
 *{
-border: 1px solid;*/
+/*border: 1px solid;*/
   margin: 0;
   padding: 0;
 }
@@ -130,7 +130,6 @@ body{
 .clearfix:after{
   visibility: hidden;
   display: block;
- 
 }
 
 * html .clearfix{
@@ -147,12 +146,14 @@ body{
   clear: both;
 }
 
-ul, ol{
+ul{
   list-style: none;
 }
+
 nav{
   display: block;
 }
+
 #nav {
   width: 100%; /* 1000 */
   font-weight: 600;
@@ -405,7 +406,7 @@ nav{
   padding: 0;
   margin-top: 0;
   position: relative;
-  padding-top: 10px;
+  padding-top: 3.5%;
   background: url(../images2/bird.png);
   background-position: left bottom;
   background-repeat: no-repeat;
@@ -416,6 +417,12 @@ nav{
   display: table;
   clear: both;
   content: '';
+}
+
+@media screen and (max-width: 1199px){
+  .middle{
+    padding-top: 0.5%;
+  }
 }
 
 .middle .row{
@@ -448,17 +455,28 @@ nav{
   text-align: justify;
 }
 
-.programs h1, .addschool h2{
+.programs h2, .addschool h2{
   color: #e47450;
+  font-size: 240%;
+}
+
+.programs h2{
+  padding-left: 1.5%;
 }
 
 .english h4, .spanish h4, .addschool h4{
   color: #EE9E69;
 }
 
-.english p, .spanish p, .addschool{
+, .addschool{
   text-align: justify;
+}
 
+.programs .col-sm-4, .prog .col-sm-4{
+  padding: 0;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+  text-align: justify;
 }
 
 .prog {
@@ -472,10 +490,37 @@ nav{
 .col-sm-2{
   margin: 0;
   padding: 0;
+  padding-left: 1%;
 
 }
 
 img{
   width: 100%;
   margin-top: 17%;
+}
+
+@media screen and (max-width: 767px){
+  img{
+     margin-top: 1%;
+  }
+}
+
+
+
+.footer {
+  background: url(../images2/footer1.png);
+  background-repeat: no-repeat;
+  background-color: #BFF08E;/*додатковий колір світло зелений*/
+  text-align: center;
+  font-size: 150%;
+}
+.footer:before {
+  position: absolute;
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 5px;
+  left: 0;
+  bottom: -2px;
+  background: url(../images2/bg_edge4.png) repeat-x 0 0;
 }
