нова сторінка контакти
нова сторінка контакти

--- a/css/newprograms.css
+++ b/css/newprograms.css
@@ -506,7 +506,8 @@ img{
 }
 
 
-
+/* footer
+-----------------------------------------------------------------------------*/
 .footer {
   background: url(../images2/footer1.png);
   background-repeat: no-repeat;
