--- a/css/newstaff.css
+++ b/css/newstaff.css
@@ -23,7 +23,8 @@ html, body {
 body{
   background-color: #f8e7ba;
   color:#5D7274;/*основний колір всього тексту сірий*/
-  font: 14px/20px 'Caveat Brush', cursive;
+  font: 16px/20px;
+  font-family: 'Open Sans', sans-serif;
   height: 100%;
   overflow: scroll;
   margin: 0;
